--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <body id="body">
     <!-- header -->
     <header class="header wrapper" id="header">
-        <svg width="72" height="32" viewBox="0 0 72 32" xmlns="http://www.w3.org/2000/svg">
+        <!-- logo -->
+        <svg class="header__logo" viewBox="0 0 72 32" xmlns="http://www.w3.org/2000/svg">
             <g fill="none" fill-rule="evenodd">
                 <path
                     d="M8.562 1.634 16 9.073l7.438-7.439a3 3 0 0 1 4.243 0l2.685 2.685a3 3 0 0 1 0 4.243L22.927 16l7.439 7.438a3 3 0 0 1 0 4.243l-2.685 2.685a3 3 0 0 1-4.243 0L16 22.927l-7.438 7.439a3 3 0 0 1-4.243 0L1.634 27.68a3 3 0 0 1 0-4.243L9.073 16 1.634 8.562a3 3 0 0 1 0-4.243L4.32 1.634a3 3 0 0 1 4.243 0Z"
